# ECAD-processor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  v2_baseline_results.md
benches/: processing_benchmark.rs
output/: SCHEMA.md
specs/: v2-multi-metric-zip-processing.md
src/: error.rs  lib.rs  main.rs
src/analyzers/: mod.rs  weather_analyzer.rs
src/archive/: inspector.rs  mod.rs  multi_processor.rs  processor.rs  temp_manager.rs
src/cli/: args.rs  commands.rs  mod.rs
src/models/: consolidated.rs  mod.rs  station.rs  temperature.rs  weather.rs
src/processors/: data_merger.rs  integrity_checker.rs  mod.rs  parallel_processor.rs
src/readers/: concurrent_reader.rs  mod.rs  station_reader.rs  temperature_reader.rs
src/utils/: constants.rs  coordinates.rs  filename.rs  mod.rs  progress.rs
src/writers/: mod.rs  parquet_writer.rs
tests/: integration_tests.rs
